# space_project

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  infer.py  ml.py  pyproject.toml
.dvc/: config
configs/: config.yaml  run.yaml  test.yaml  train.yaml
data/: .gitignore  dataset_nasa.csv.dvc
mlruns/0/: meta.yaml
mlruns/0/20a346c5560b4c649fc4085eecd005e6/: meta.yaml
mlruns/0/20a346c5560b4c649fc4085eecd005e6/metrics/: accuracy  f1  loss
mlruns/0/20a346c5560b4c649fc4085eecd005e6/tags/: mlflow.runName
mlruns/0/3b99e3b615d246febd52d833030dec57/: meta.yaml
mlruns/0/3b99e3b615d246febd52d833030dec57/tags/: mlflow.runName
mlruns/0/4e8a59f2668d40d8ad3968aea2748bff/: meta.yaml
mlruns/0/4e8a59f2668d40d8ad3968aea2748bff/metrics/: accuracy  f1  loss
mlruns/0/4e8a59f2668d40d8ad3968aea2748bff/tags/: mlflow.runName
mlruns/0/4f1c539702a04beaa8104d311fb0626a/: meta.yaml
mlruns/0/4f1c539702a04beaa8104d311fb0626a/metrics/: accuracy  f1  loss
mlruns/0/4f1c539702a04beaa8104d311fb0626a/tags/: mlflow.runName  mlflow.source.name
mlruns/0/c9349c8493604c349d1445d10c805a53/: meta.yaml
mlruns/0/c9349c8493604c349d1445d10c805a53/metrics/: accuracy  f1  loss
mlruns/0/c9349c8493604c349d1445d10c805a53/tags/: mlflow.runName
model-repository/onnx-model/: config.pbtxt
models/: model.onnx  model.onnx.dvc
outputs/2023-11-30/22-29-24/.hydra/: hydra.yaml
outputs/2023-11-30/23-20-18/.hydra/: hydra.yaml
passport_detect/: data.py  infer.py  model.py  run_server.py  train.py
passportdetect/: boom_NN.py  infer.py  train.py
(+15 files in other folders)
