[tool.poetry]
name = "passportdetect"
version = "0.1.0"
description = "The passport detection"
authors = ["Lesnoy Elf"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
requests = "^2.31.0"
scikit-learn = "^1.3.1"
catboost = "^1.2.2"
imblearn = "^0.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
